fix overflow

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
     flex-direction: column; 
     background-color: #0070C0; /* Fond bleu */
     color: white; /* Texte blanc */
+    overflow-x: hidden; /* Empêche le défilement horizontal */
 }
 .header {
     display: flex;
@@ -35,6 +36,7 @@ body {
 @media (max-width: 700px) {
     .header {
         flex-direction: column;
+        padding: 10px 20px; /* Ajout de padding pour éviter la bande bleue */
     }
     .header .logo {
         margin-top: 10px;
